redis/base/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis:7.0
          ports:
            - name: redis
              containerPort: 6379
      nodeSelector:
        beta.kubernetes.io/os: linux
