redis/base/commander-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: redis-commander
