redis/base/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  labels:
    name: redis-db
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-db
