redis/base/commander-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-localhost
spec:
  ingressClassName: nginx
  rules:
    - host: commander.test.local
      http:
        paths:
          - backend:
              service:
                name: redis-commander
                port:
                  number: 8081
            path: /
            pathType: Prefix
